# Quacken

./: .gitignore  README.md  config.yaml  flake.nix  index.html
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/src/: layout.rs  main.rs  zero.rs
footprints/: choc_hummingbird.js  diode_sod_323.js  test_choc.js
gerbers/: quacken_pcb-B_Adhesive.gbr  quacken_pcb-B_Cu.gbr  quacken_pcb-B_Mask.gbr  quacken_pcb-B_Paste.gbr  quacken_pcb-B_Silkscreen.gbr  quacken_pcb-Edge_Cuts.gbr  quacken_pcb-F_Adhesive.gbr  quacken_pcb-F_Cu.gbr  quacken_pcb-F_Mask.gbr  quacken_pcb-F_Paste.gbr  quacken_pcb-F_Silkscreen.gbr  quacken_pcb-NPTH.drl  quacken_pcb-PTH.drl  quacken_pcb-job.gbrjob
output/outlines/: board.dxf  combo.dxf  electronics.dxf  keys.dxf
output/pcbs/: fp-info-cache  freerouting.dsn  quacken_pcb.kicad_pcb  quacken_pcb.kicad_prl  quacken_pcb.kicad_pro  quacken_pcb_.kicad_pcb  quacken_zero.kicad_pcb  quacken_zero.kicad_pro  ~_autosave-quacken_pcb.kicad_pcb.lck
output/pcbs/Library.pretty/: ergol_logo.kicad_sym  logo_ergol.kicad_mod  logo_ergol_small.kicad_mod
output/pcbs/production/: netlist.ipc
production/: bom.csv  designators.csv  netlist.ipc  positions.csv
